force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/Propfocus_Site_Visit_Sync__c.object-meta.xml
<CustomObject>
    <label>Propfocus Site Visit Sync</label>
    <nameField>
        <displayFormat>PSV-{000000}</displayFormat>
        <label>Site Visit Sync Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propfocus Site Visit Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>