force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Propfocus Site Visit Syncs</relationshipLabel>
    <relationshipName>PropfocusSiteVisitSyncs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>