force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Propfocus Site Visit Syncs (Opportunity)</relationshipLabel>
    <relationshipName>PropfocusOppSiteVisitSyncs</relationshipName>
    <type>Lookup</type>
</CustomField>