force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/fields/Site_Visit_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Datetime__c</fullName>
    <label>Site Visit Datetime</label>
    <type>DateTime</type>
</CustomField>