force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/fields/Site_Visit_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Number__c</fullName>
    <externalId>true</externalId>
    <label>Site Visit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>