force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/fields/Site_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Type__c</fullName>
    <label>Site Visit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>