force-app/main/default/objects/Propfocus_Site_Visit_Sync__c/fields/SV_Team__c.field-meta.xml
<CustomField>
    <fullName>SV_Team__c</fullName>
    <label>SV Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>